feat: simplify role naming convention and remove API versioning
Standardize role names across the system for better clarity and consistency:
- SUPER_ADMIN → SYSTEM_ADMIN
- SHOP_MANAGER → MANAGER
- SHOP_EMPLOYEE → EMPLOYEE
- SHOP_OWNER → OWNER

Add missing roles to complete RBAC implementation:
- CASHIER: Sales and basic inventory operations
- ACCOUNTANT: Financial reports and analytics
- AUDITOR: Read-only compliance access
- CUSTOMER: Receipt and purchase history access

Remove /v1/ API versioning from all endpoints:
- Backend controllers: /api/v1/* → /api/*
- Frontend API client configuration
- Documentation and test fixtures
- Keycloak realm configuration

Database migration V4:
- Update existing role names in roles table
- Insert 5 new roles (OWNER, CASHIER, ACCOUNTANT, AUDITOR, CUSTOMER)
- Maintain backward compatibility with existing user-role associations

Code changes:
- Updated @PreAuthorize annotations across 21 controllers
- Fixed NotificationEventListener role lookups
- Updated SecurityRoles constants and tests
- Modified CreateKeycloakUserRequest default role
- Updated SuperAdminBootstrapService role references

Documentation updates:
- TESTING-GUIDE.md: Added owner@shopmanager.com test user
- ABAC_Permission_Matrix.md: Updated all permission matrices
- API_INTEGRATION_GUIDE.md: Removed /v1/ from 150+ endpoints
- USER_JOURNEY_MAP.md: Updated role names and API paths
- DEPLOYMENT_GUIDE.md: Added owner credentials
- DEVELOPER_GUIDE.md: Updated test user credentials

Testing updates:
- Updated 12 test files with new role names
- Fixed Keycloak realm test fixtures
- Updated WebMvcTestConfiguration

Kubernetes deployment:
- Built and pushed frontend-v0.0.2
- Built and pushed backend-v0.0.1
- Deployed to gomco namespace (Revision 12)
- All 10 roles verified in database
- Backend health check passing